--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "license": "ISC",
   "devDependencies": {
     "electron": "^34.0.0",
-    "electron-builder": "^25.1.8"
+    "electron-builder": "^25.1.8",
+    "electron-rebuild": "^3.2.9"
   },
   "build": {
     "appId": "com.jobsearcher.app",
