Add puppeteer dependencies for web scraping functionality

--- a/package.json
+++ b/package.json
@@ -58,6 +58,9 @@
     }
   },
   "dependencies": {
-    "better-sqlite3": "^12.4.1"
+    "better-sqlite3": "^12.4.1",
+    "puppeteer": "^24.24.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
 }
