--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     }
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "better-sqlite3": "^12.4.1",
     "puppeteer": "^24.24.0",
     "puppeteer-extra": "^3.3.6",
