Add automatic Ollama server startup and cleanup
- Add automatic Ollama server detection and startup in gptExtractor.js
- App now starts Ollama server automatically if not running
- Add proper cleanup of Ollama process on app shutdown
- Update package.json with new start scripts for manual/auto modes
- Remove unnecessary test files (test-puter-ai.html, index.html.backup)
- Add concurrently dependency for optional manual start mode

Now supports single command startup: npm start

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "src/main/main.js",
   "scripts": {
     "start": "set NODE_OPTIONS=--no-deprecation && electron . --no-cache",
+    "start-auto": "set NODE_OPTIONS=--no-deprecation && electron . --no-cache",
+    "start-manual": "concurrently \"ollama serve\" \"npm run start-auto\" --names \"Ollama,App\" --prefix-colors \"blue,green\"",
     "build": "electron-builder",
     "build:win": "electron-builder --win",
     "build:mac": "electron-builder --mac",
