--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
   "dependencies": {
     "axios": "^1.12.2",
     "better-sqlite3": "^12.4.1",
+    "googleapis": "^166.0.0",
+    "nodemailer": "^7.0.10",
     "puppeteer": "^24.24.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
